[package]
name = "pro-xy-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
flex-dns = "1.0.1"
aya-bpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
pro-xy-common = { path = "../pro-xy-common" }

[[bin]]
name = "pro-xy"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
